# slayzone

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  E2E-REPORT.md  README.md  RELEASE_RUNBOOK.md  TEST_STATUS_REPORT.md  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: chromium-build.yml  ci.yml  publish-hub-runner.yml  release-foundation.yml  release-pr-dry-run.yml  release.yml
chromium/: CHROMIUM_VERSION  README.md
comparison/: COMPETITOR_GUIDE.md  README.md  TRACKING.md
comparison/_legacy/: README.md
comparison/_research/: README.md  market-landscape.md
comparison/_template/: index.md
comparison/auto-claude/: index.md
comparison/codex-monitor/: index.md
comparison/jean/: index.md
comparison/openai-codex/: index.md
comparison/polyscope/: index.md
comparison/vibekanban/: index.md
nix/: sources.json
patches/: @convex-dev__auth@0.0.90.patch  posix@4.2.0.patch
patches/chromium/: 0001-slayzone-rebrand-Chromium-SlayZone-Phase-2.1-placeho.patch  0002-slayzone-chrome-scheme-handler-factory-empty-slayzon.patch  0003-slayzone-sidecar-client-C-shim-Phase-2.3.patch  0004-slayzone-telemetry-strip-Phase-2.4.patch  0005-slayzone-NTP-chrome-slayzone-shell-rewrite-Phase-2.5.patch  0006-slayzone-pin-kCGImageByteOrder32Little-explicitly-fo.patch  0007-slayzone-avoid-macOS-26-NSScreen.CGDirectDisplayID-p.patch  0008-slayzone-Phase-5.1-SlayzoneBrowserView-scaffold-layo.patch  0009-slayzone-Phase-5.2-10-slot-placeholder-grid-Placehol.patch  0010-slayzone-Phase-5.3-feasibility-spike-inject-WebConte.patch  0011-slayzone-Phase-5.4-SlayzoneSplitView-draggable-divid.patch  0012-slayzone-Phase-5.5-focus-chain-Cmd-1.9-region-focus-.patch  0013-slayzone-Phase-5.6-layout-intent-API-layout.mojom-Sl.patch  0014-slayzone-Phase-6.1-tabs.mojom-SlayzoneTabsHost.patch  (+54 more)
plans/: agent-prompts-sidebar.md  agent-sessions.md  chromium-home-tab-full.md  chromium-home-tab.md  conv-id-robustness-v2.md  conversation-id-robustness.md  fork-convex-auth.md  fork-first-run-dialogs.md  fork-search-palette.md  fork-windows-deeplink.md  hub-runner-interactive-setup.md  hub-single-mode-port.md  ipc-handler-deletion.md  session-history-sidebar.md  shared-package-version.md  sidecar-staleness.md  unskip-all-e2e.md
scripts/: check-renderer-window-api.sh  check-server-electron-free.sh  check-trpc-stable-deps.sh  generate-release-notes.js  postinstall.js  publish-hub-runner.sh  sync-versions.mjs  tag-release.sh
scripts/chromium/args/: release-linux-arm64.gn  release-linux-x64.gn  release-mac-arm64.gn  release-mac-x64.gn  release-win-arm64.gn  release-win-x64.gn  release.gn
website/: astro.config.mjs  build.sh  package.json
working-notes/: cli-elevated-install  codex-gray-prompt-box.md  webauthn-passkeys
(+135 files in other folders)
