# Stage B draft — mac arm64 release args.
# Extends release.gn with target_os + target_cpu.
# reclient flags land in Stage C.

is_debug = false
is_component_build = false
symbol_level = 1
dcheck_always_on = false

is_chrome_branded = false
proprietary_codecs = false
ffmpeg_branding = "Chromium"
use_official_google_api_keys = false

target_os = "mac"
target_cpu = "arm64"
# Chromium 147 uses kIOMainPortDefault (macOS 12+). 11.0 is no longer buildable
# against M-series SDKs. Host is macOS 14+ anyway.
mac_deployment_target = "12.0"

# Xcode 16.2 SDK ships DarwinFoundation.modulemap only; Chromium 147 expects
# DarwinFoundation{1,2,3}.modulemap (Xcode 26+). Disable clang modules so the
# build uses the classic header path. Re-enable once the toolchain baseline
# bumps to Xcode 26 (Stage C / CI runner provisioning).
use_clang_modules = false
